#559 - Support multi-attribute DynamoDB search without composite keys